<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Cofe Online Solution</string>
    <string name="app_welcome">Welcome to Demo for FunSDK!\n©2024, Powered by JFTECH.</string>
    <string name="set_user">User</string>
    <string name="set_dev">Device</string>
    <string name="set_list">Device List</string>
    <string name="set_about">About Demo</string>
    <string name="set_user_register">Register</string>
    <string name="set_user_login">Login</string>
    <string name="set_user_modify_pwd">Modify Password</string>
    <string name="set_user_forget_pwd">Forget Password</string>
    <string name="set_user_info">User Information</string>
    <string name="set_user_info_change">edit</string>
    <string name="set_user_info_change_save">save</string>
    <string name="set_user_save_local_pwd">Save Local Password</string>
    <string name="user_name_repeat_btn">Repeat</string>
    <string name="user_logout">Logout</string>
    <string name="guide_message_username_fine">User name available</string>
    <string name="guide_message_request_phone_msg_success">Request to send verification code succeeded</string>
    <string name="user_login_error_emptypassword">The password is empty</string>
    <string name="user_login_error_emptyverifycode">Verification code is empty</string>
    <string name="guide_message_register_user_success">Registered user successfully</string>
    <string name="user_set_debug_info">Select whether to use the local password saving function here (valid at the next startup). If this function is used, the myapplication class will set the save path during initialization, and the password setting will be saved every time the device is successfully logged in. To obtain the local password, you can call FunSDK.DevGetLocalPwd () interface</string>
    <string name="test_qrcode_create">Create QR code</string>
    <string name="input_something">Input information</string>
    <string name="start_lan_alarm">Lan Alarm</string>
    <string name="device_lan_alarm_test">Alarm of LAN</string>
    <string name="device_opt_off">Close</string>
    <string name="device_opt_on">Open</string>
    <string name="user_info_id">ID</string>
    <string name="user_info_username">user name</string>
    <string name="user_info_email">e-mail</string>
    <string name="user_info_phone">mobile phone</string>
    <string name="user_info_sex">Sex</string>
    <string name="user_info_reg_time">Registration time</string>
    <string name="user_login_error_emptyusername">The user name is empty</string>
    <string name="user_login_error_email">Email error</string>
    <string name="user_login_error_phone_number">Wrong mobile number</string>
    <string name="guide_message_error_call">Interface call returned error, please check</string>
    <string name="user_forget_pwd_verify_code_format_erroe">The captcha should be a four digit integer</string>
    <string name="user_forget_pwd_verify_code_first">Please submit the verification code first</string>
    <string name="user_forget_pwd_new_password_error">Please check the format of the new password</string>
    <string name="password_checker_weak_error"> The password you entered is too simple</string>
    <string name="user_forget_pwd_new_password_confirm_error">Please make sure that the password you entered is the same</string>
    <string name="user_forget_pwd_verify_success">Validation successful</string>
    <string name="user_forget_pwd_reset_passw_success">Password reset successful</string>
    <string name="user_forget_pwd_email"> please enter your mailbox</string>
    <string name="user_forget_pwd_phone"> please enter your mobile phone number</string>
    <string name="user_forget_pwd_verify_code"> please enter your verification code</string>
    <string name="user_forget_pwd_send_verify_code"> click to get</string>
    <string name="user_forget_pwd_verify_code_sent"> verification code has been sent</string>
    <string name="user_forget_pwd_new_passw"> please enter a new password</string>
    <string name="user_forget_pwd_new_passw_confirm"> please enter the confirm password</string>
    <string name="user_forget_pwd_submit"> submit</string>
    <string name="user_forget_pwd_verify"> submit verification code</string>
    <string name="password_checker_strong"> strong</string>
    <string name="password_checker_medium"> in </string>
    <string name="password_checker_weak"> weak </string>
    <string name="password_checker_empty"> empty</string>
    <string name="password_checker_short"> short</string>
    <string name="password_checker_long"> long</string>
    <string name="user_change_password"> confirm the change</string>
    <string name="user_change_password_hint_username"> account number more than 6 letters/numbers/symbols</string>
    <string name="user_change_password_hint_old_password"> old password</string>
    <string name="user_change_password_hint_new_password"> new password 6–16 digits/letters/symbols</string>
    <string name="user_change_password_hint_new_password_confirm"> please enter the password again</string>
    <string name="user_change_password_sucess"> modify the password successfully, please use the new password to log in again</string>
    <string name="user_change_password_error_emptyusername"> user name cannot be empty</string>
    <string name="user_change_password_error_emptypassw"> any password cannot be empty</string>
    <string name="user_change_password_error_passwtooshort"> new password is not up to standard</string>
    <string name="user_change_password_error_passwnotequal"> Please make sure that you enter the same password twice</string>
    <string name="user_login_hint_username"> account number/phone number</string>
    <string name="user_login_hint_password"> password</string>
    <string name="user_login_forgot_passwd"> Forgot your password?</string>
    <string name="user_login"> login </string>
    <string name="user_login_save_password"> save the password</string>
    <string name="user_login_auto_login"> automatic login </string>
    <string name="user_login_otherway"> can also choose the following way to log in </string>
    <string name="user_login_byweibo"> Sina Weibo login</string>
    <string name="user_login_byqq">QQ account login</string>
    <string name="user_login_noaccount"> no account?</string>
    <string name="user_login_register"> quick registration account </string>
    <string name="user_login_please_input_username_and_pwd">please input username and password</string>
    <string name="user_register_china"> China +86</string>
    <string name="user_register_get_verify_code"> click to get </string>
    <string name="user_register_account"> quick registration </string>
    <string name="user_register_by_email"> through the mailbox</string>
    <string name="user_register_by_cellphone"> through mobile phone</string>
    <string name="user_register_error_password_unmatched"> before and after the password does not match </string>
    <string name="user_register_error_username_length"> user name length does not match </string>
    <string name="user_register_error_password_length"> password length does not match </string>
    <string name="user_register_hint_username"> "account 6 or more letters/numbers/symbols"</string>
    <string name="user_register_hint_email">"Email is used when filling in/retrieving the password correctly"</string>
    <string name="user_register_hint_phone"> "Please enter the 11-digit phone number"</string>
    <string name="user_register_hint_verify_code"> "Enter the verification code"</string>
    <string name="user_register_hint_password"> "password 8–16 digits/letters/symbols"</string>
    <string name="user_register_hint_password_confirm"> please enter the password again</string>
    <string name="user_registering"> is registering…</string>
    <string name="user_register_success"> registered successfully, logging in…</string>
    <string name="user_register_login_success"> successfully logged in</string>
    <string name="user_register_login_fail"> login failure </string>
    <string name="user_not_login"> not logged in</string>
    <string name="user_info_not_login"> you have not logged in</string>
    <string name="user_info_sex_man"> male</string>
    <string name="user_info_sex_female"> female</string>
    <string name="guide_module_title_device_sn"> serial number to connect the device</string>
    <string name="guide_module_title_device_ap"> AP direct connection device</string>
    <string name="guide_module_title_device_lan"> LAN connection equipment </string>
    <string name="guide_module_title_device_add"> users add equipment </string>
    <string name="guide_module_title_device_connect2"> shared equipment</string>
    <string name="guide_module_title_device_browse"> view device files</string>
    <string name="guide_module_title_device_alarm"> device alarm </string>
    <string name="guide_module_title_device_setwifi"> WiFi quick configuration </string>
    <string name="device_opt_alarm_config"> Alarm Configuration </string>
    <string name="device_setup"> device configuration </string>
    <string name="device_preview"> device preview</string>
    <string name="device_setup_encode"> encoding configuration</string>
    <string name="device_setup_record"> video configuration </string>
    <string name="device_setup_image"> image configuration</string>
    <string name="device_setup_expert"> advanced configuration </string>
    <string name="device_setup_storage"> device storage management </string>
    <string name="device_setup_camerafisheye"> fisheye bulb control </string>
    <string name="device_setup_change_password"> password modification </string>
    <string name="device_setup_hint_encode_config_alarm"> here, you can configure the resolution, number of frames, audio, video</string>
    <string name="device_setup_hint_alarm_config_alarm"> The device supports various alarm triggering and linkage, you can configure it here</string>
    <string name="device_setup_hint_record_config_alarm"> This setting allows you to change the recording mode, turn off the audio, and change the file length</string>
    <string name="device_setup_record_cloud"> cloud storage</string>
    <string name="login_by_ap">AP Direct Connection</string>
    <string name="direct_access_to_device">Accessing the device directly without requiring an account login</string>
    <string name="message">Message</string>
    <string name="enter_device_name">Entere Device Name</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="cancle">Cancel</string>
    <string name="email">Email</string>
    <string name="india">India</string>
    <string name="ok">OK</string>
    <string name="_91">+91</string>
    <string name="visitor_login">Visitor Login</string>
    <string name="welcome">Welcome!</string>
    <string name="bhavneesh_goyal99_gmail_com">bhavneesh.goyal99@gmail.com</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register">Register</string>
    <string name="log_in">Log In</string>
    <string name="i_have_read_and_agreed_service_agreement_and_privacy_policy">I have read and agreed 《Service Agreement》 and 《Privacy Policy》</string>
    <string name="quick_login_with_o_ther_methods">Quick login with o ther methods</string>
    <string name="settings">Settings</string>
    <string name="name">name</string>
    <string name="d87bba580a55_3mn9_p25">d87bba580a55****3mn9@P25</string>
    <string name="share_with_friends">Share with Friends</string>
    <string name="delete_1">Delete</string>
    <string name="are_you_sure_you_want_to_cancel_sharing">Are you sure you want to cancel sharing?</string>
    <string name="enter_old_password">Enter old password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="update">Update</string>
</resources>