<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/popup_background">

    <TextView
        android:id="@+id/popup_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_device_name"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:gravity="left"
        android:padding="8dp" />

    <EditText
        android:id="@+id/popup_oldPwdText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_old_password"
        android:padding="10dp"
        android:background="@drawable/edit_text_background"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        />


    <EditText
        android:id="@+id/popup_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_new_password"
        android:padding="10dp"
        android:background="@drawable/edit_text_background"
        android:layout_marginBottom="16dp"
        />


    <Button
        android:id="@+id/popup_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:text="@string/update"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/black"
        />
</LinearLayout>
