<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/solid_white_20"
    android:orientation="vertical"
    >


    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/are_you_sure_you_want_to_cancel_sharing"
        android:textColor="@color/black"


        android:textSize="@dimen/font_small" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"

        android:background="@color/bg_gray" />


    <LinearLayout
        android:id="@+id/ll_operation"
        android:layout_width="match_parent"
        android:layout_height="50dp"

        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancle"
            android:textAllCaps="false"
            android:textColor="@color/black"

            />
        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/bg_gray" />

        <TextView
            android:id="@+id/tvOk"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"

            android:text="@string/ok"
            android:textAllCaps="false"


            android:textColor="@color/theme" />
    </LinearLayout>
</LinearLayout>