<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:padding="16dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <include
            android:id="@+id/layoutTop"
            layout="@layout/include_title_layout"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="20dp"
            android:text="@string/visitor_login"
            android:textColor="#666666"
            android:textSize="16sp" />

        <!-- Header Section -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="32dp">

            <ImageView
                android:id="@+id/logo_img"
                android:layout_width="wrap_content"
                android:layout_height="180dp"
                android:src="@drawable/logo_app_"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/logo_img"
                android:layout_marginTop="30dp"
                android:text="@string/welcome"
                android:textColor="#333333"
                android:textSize="32sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <!-- Country and Phone Input -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edit_text_background"
            android:orientation="horizontal"
            android:padding="12dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/india"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_91"
                android:textColor="#666666"
                android:textSize="16sp" />
        </LinearLayout>

        <!-- Email Input -->

        <EditText
            android:id="@+id/et_user_login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/email"
            android:padding="12dp"
            android:text="@string/bhavneesh_goyal99_gmail_com"
            android:textColor="#000000"
            android:textSize="16sp" />

        <!-- Password Input -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edit_text_background"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="12dp">

            <EditText
                android:id="@+id/et_user_login_psw"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/please_enter_password"
                android:inputType="textPassword"
                android:text="Surya123#"
                android:textColor="#000000"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/userLoginPasswdIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="Toggle Password Visibility"
                android:src="@drawable/eye_closed_svg" />
        </LinearLayout>


        <!-- Forgot Password and Register -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/forgot_txtv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:text="@string/forgot_password"
                android:textColor="#666666"
                android:textSize="14sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="0.4" />

            <TextView
                android:id="@+id/btn_user_register"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/register"
                android:textColor="@color/colorAccent"
                android:textSize="14sp" />
        </LinearLayout>

        <!-- Login Button -->
        <Button
            android:id="@+id/btn_user_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/log_in"
            android:textColor="#FFFFFF"
            android:textSize="16sp"

            />

        <Button
            android:id="@+id/btn_login_by_local"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="#00C0A3"
            android:text="@string/log_in"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:visibility="gone" />

        <!-- Terms and Conditions -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:gravity="center"
            android:text="@string/i_have_read_and_agreed_service_agreement_and_privacy_policy"
            android:textColor="#666666"
            android:textSize="14sp"
            android:visibility="gone" />

        <!-- Quick Login Section -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/quick_login_with_o_ther_methods"
            android:textColor="#666666"
            android:textSize="14sp"
            android:visibility="gone" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FAFAFA"
            android:visibility="gone">

            <include
                android:id="@+id/layoutTop"
                layout="@layout/include_title_layout" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/layoutTop"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgLogo"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_below="@id/layoutTop"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:background="@color/transparent"
                    android:src="@mipmap/logo_app" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/login_bg"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp">

                        <ImageView
                            android:id="@+id/userLoginUserNameIcon"
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_marginTop="20dp"
                            android:padding="2dp"
                            android:scaleType="fitXY"
                            android:src="@mipmap/user_icon_login_user" />

                        <ImageButton
                            android:id="@+id/btn_login_history"
                            android:layout_width="28dp"
                            android:layout_height="28dp"
                            android:layout_alignTop="@id/userLoginUserNameIcon"
                            android:layout_alignParentEnd="true"
                            android:background="@drawable/common_button_selector_trans"
                            android:padding="5dp"
                            android:scaleType="fitCenter"
                            android:src="@mipmap/icon_arrow_down" />
                        <!-- 删去，使得edittext自带下划线android:background="#00000000" -->
                        <View
                            android:id="@+id/btn_pwd_hide"
                            android:layout_width="28dp"
                            android:layout_height="28dp"
                            android:layout_alignParentEnd="true"
                            android:background="@drawable/common_button_selector_trans"
                            android:padding="5dp"
                            android:scaleType="fitCenter"
                            android:visibility="invisible" />
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/login_bg"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <Button
                        android:id="@+id/btn_user_login1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginRight="30dp"
                        android:background="@drawable/button_selector"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/user_login"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="1dp"
                        android:layout_marginRight="1dp"
                        android:orientation="vertical"
                        android:visibility="visible">

                        <Button
                            android:id="@+id/btn_login_by_ap"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="30dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="30dp"
                            android:background="@drawable/button_2_selector"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="@string/login_by_ap"
                            android:textColor="@color/white"
                            android:textSize="18dp"
                            android:visibility="visible" />
                        <!-- 无需账号登录直接访问设备 -->
                        <Button
                            android:id="@+id/btn_direct_access_to_device"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="30dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="30dp"
                            android:layout_marginBottom="10dp"
                            android:background="@drawable/button_2_selector"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="@string/direct_access_to_device"
                            android:textColor="@color/white"
                            android:textSize="18dp"
                            android:visibility="visible" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:gravity="center_horizontal|bottom"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_login_noaccount"
                        android:textColor="#ff959595"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</ScrollView>
